Add PWA metadata and manifest

--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon-192.svg" />
+    <link rel="apple-touch-icon" href="/icon-192.svg" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Run, orchestrate, and observe CLI agents across providers with a unified desktop interface for managing agent workflows."
+    />
+    <meta name="theme-color" content="#0891b2" />
     <title>Banshee</title>
   </head>
   <body>
